--- a/web/templates/web/base.html
+++ b/web/templates/web/base.html
@@ -6,9 +6,9 @@
 <head>
   <title>Deis</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
-  <link href="{% static "css/deis.css" %}" rel="stylesheet">
-  <link href="{% static "css/bootstrap-responsive.min.css" %}" rel="stylesheet">
+  <link href="{% static "css/bootstrap.css" %}" rel="stylesheet" media="screen">
+  <link href="{% static "css/main.css" %}" rel="stylesheet">
+  <link href="{% static "css/bootstrap-responsive.css" %}" rel="stylesheet">
   <link rel="shortcut icon" href="{% static "favicon.ico" %}">
 </head>
 
