--- a/web/templates/web/account.html
+++ b/web/templates/web/account.html
@@ -1,5 +1,18 @@
 {% extends "web/base.html" %}
+{% load gravatar_tags %}
+{% load i18n %}
 
 {% block content %}
 <h2>{{ request.user }}'s Account</a></h2>
+<img src="{% gravatar_url request.user.email %}" class="img-circle" height="64" width="64">
+<form method="post" action="{% url 'account_logout' %}">
+  {% csrf_token %}
+  {% if redirect_field_value %}
+  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+  {% endif %}
+  <button type="submit">{% trans 'Log Out' %}</button>
+</form>
+{% if user.is_staff %}
+<a href="{% url 'admin:index' %}">Admin</a>
+{% endif %}
 {% endblock %}
