--- a/web/templates/account/password_reset.html
+++ b/web/templates/account/password_reset.html
@@ -11,15 +11,15 @@
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
-    
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-    
+
+    <p>{% trans "Can't remember your password?<br>Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+
     <form method="POST" action="" class="password_reset">
         {% csrf_token %}
-        {{ password_reset_form.as_p }}
+        {{ form.as_p }}
         <input type="submit" value="{% trans "Reset My Password" %}" />
     </form>
-    
+
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
 {% endblock %}
 
