--- a/web/templates/web/base.html
+++ b/web/templates/web/base.html
@@ -1,51 +1,69 @@
 {% load staticfiles %}
-{% load gravatar_tags %}
 <!DOCTYPE html>
 <html>
 
 <head>
   <title>Deis</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="description" content="">
+  <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="{% static "css/bootstrap.css" %}" rel="stylesheet" media="screen">
-  <link href="{% static "css/main.css" %}" rel="stylesheet">
-  <link href="{% static "css/bootstrap-responsive.css" %}" rel="stylesheet">
-  <link rel="shortcut icon" href="{% static "favicon.ico" %}">
-</head>
 
-<body>
+  <link rel="stylesheet" href="{% static "css/bootstrap.css" %}" media="screen" type="text/css">
+  <link rel="stylesheet" href="{% static "css/bootstrap-responsive.css" %}" type="text/css">
+  <link rel="stylesheet" href="{% static "css/main.css" %}" type="text/css">
+  <link rel="shortcut icon" href="{% static "favicon.ico" %}">
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+  <meta name='robots' content='noindex,nofollow' />
+  {% block extrahead %}{% endblock %}
+</head>
+<body style="zoom: 1;">
+  <!--[if lt IE 7]>
+      <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+  <![endif]-->
+
+  <a class="fork" href="http://github.com/opdemand/deis"><div class="forkImage"></div></a>
   <div class="container">
-    <div class="navbar">
-      <div class="navbar-inner">
-        <a class="brand" href="{% url "dashboard" %}"><img src="{% static 'img/logo.png' %}" height="16" width="40"></a>
-        {% if request.user.is_authenticated %}
-        <ul class="nav pull-right">
-          <li {% ifequal current_page 'formations' %}class="active"{% endifequal %}><a href="{% url "formations" %}">Formations</a></li>
-          <li {% ifequal current_page 'docs' %}class="active"{% endifequal %}><a href="{% url "docs" %}">Documentation</a></li>
-          <li {% ifequal current_page 'support' %}class="active"{% endifequal %}><a href="{% url "support" %}">Support</a></li>
-          <li class="dropdown{% ifequal current_page 'account' %} active{% endifequal %}">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <img src="{% gravatar_url request.user.email %}" class="img-avatar" height="24" width="24">&nbsp;<b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="{% url "account" %}">Account</a></li>
-              <li><a href="{% url "account_logout" %}">Logout</a></li>
-            </ul>
-          </li>
-        </ul>
-        {% endif %}
+    <div class="row">
+      <div class="span3 column_calc menu">
+        <div class="nav-border top-spacing">
+          <ul class="nav nav-list menu">
+            <li><a href="{% url "dashboard" %}"><img class="logo" src="{% static "img/menu-logo.png" %}" alt="deis logo"></a></li>
+            <li class="divider"></li>
+            {% if user.is_authenticated %}
+            <li class="navitem{% ifequal page "formations" %} selected pink{% endifequal %}"><a href="{% url "formations" %}">Formations</a></li>
+            <li class="divider"></li>
+            <li class="navitem{% ifequal page "account" %} selected green{% endifequal %}"><a href="{% url "account" %}">Account</a></li>
+            <li class="divider"></li>
+            <li class="navitem"><a href="http://docs.deis.io/" target="_blank">Documentation</a></li>
+            <li class="divider"></li>
+            <li class="navitem{% ifequal page "support" %} selected blue{% endifequal %}"><a href="{% url "support" %}">Support</a></li>
+            <li class="divider"></li>
+            <div style="clear:both;"></div>
+            {% endif %}
+          </ul>
+          <div class="social-menu">
+            <a href="https://twitter.com/opendeis" target="_blank"><span class="twitter"></span></a>
+            <a href="http://freenode.net" target="_blank"><span class="irc"></span></a>
+            <a href="https://github.com/opdemand/deis" target="_blank"><span class="github"></span></a>
+            <a href="http://stackoverflow.com/" target="_blank"><span class="stack"></span></a>
+          </div>
+          <div class="byline-menu">
+            <span class="cloud-logo"></span>
+            <p>Deis is a project by<br>OpDemand</p>
+          </div>
+        </div>
       </div>
-    </div>
-    {% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-  	{% block content %}{% endblock %}
-  </div>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="{% static "js/jquery-2.0.3.min.js" %}"><\/script>')</script>
-  <script src="{% static "js/bootstrap.min.js" %}"></script>
+
+      <div class="span8 column_calc contents">
+        <div class="doc-content">{% block content %}{% endblock %}</div>
+      </div>
+
+    </div> <!-- .row -->
+  </div> <!-- .main_section container-->
+
 </body>
 
 </html>
