Fixed #267 -- updated controller web UI.

--- a/web/templates/web/account.html
+++ b/web/templates/web/account.html
@@ -2,17 +2,32 @@
 {% load gravatar_tags %}
 {% load i18n %}
 
+{% block title %}Account{% endblock %}
+
 {% block content %}
-<h2>{{ request.user }}'s Account</a></h2>
-<img src="{% gravatar_url request.user.email %}" class="img-circle" height="64" width="64">
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <button type="submit">{% trans 'Log Out' %}</button>
-</form>
-{% if user.is_staff %}
-<a href="{% url 'admin:index' %}">Admin</a>
-{% endif %}
+<div class="green">
+  <h1>Account</h1>
+  <div class="row-fluid well">
+    <div class="span3">
+      <h3>
+        {{ user.username }}&nbsp;&nbsp;
+        <img src="{% gravatar_url user.email %}" class="img-circle" height="64" width="64">
+      </h3>
+    </div>
+    <div class="span9">
+      {{ user.first_name }} {{ user.last_name }}
+      {{ user.email }}
+    </div>
+  </div>
+  <form method="post" action="{% url 'account_logout' %}">
+    {% csrf_token %}
+    {% if redirect_field_value %}
+    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+    {% endif %}
+    <button type="submit" class="btn btn-link">{% trans 'Log Out' %}</button>
+    {% if user.is_staff %}
+    <a href="{% url 'admin:index' %}" class="btn btn-link">Admin</a>
+    {% endif %}
+  </form>
+</div>
 {% endblock %}
