--- a/web/templates/web/support.html
+++ b/web/templates/web/support.html
@@ -1,5 +1,28 @@
 {% extends "web/base.html" %}
 
+{% block title %}Support{% endblock %}
+
 {% block content %}
-<h2>Support</h2>
+<div class="blue">
+  <h1>Support</h1>
+  <h2>IRC</h2>
+  <p>
+    Join the Deis core developers and user community on the <strong>#deis</strong>
+    channel at <a href="http://freenode.net">freenode.net</a>. All questions
+    are welcome, and the core Deis developers make every effort to be available.
+  </p>
+  <h2>GitHub</h2>
+  <p>
+    Request a new feature or report a bug to the Deis team as a
+    <a href="https://github.com/opdemand/deis/issues">GitHub issue</a>. Deis
+    has great test coverage, but we rely on you to help us find things to fix
+    and ways to improve.
+  </p>
+  <h2>StackOverflow</h2>
+  <p>
+    Questions about Deis, Docker, and PaaS systems in general receive expert
+    answers from a large developer community at
+    <a href="http://stackoverflow.com/">StackOverflow</a>.
+  </p>
+</div>
 {% endblock %}
