--- a/web/static/css/deis-docs.css
+++ b/web/static/css/deis-docs.css
@@ -14,3 +14,15 @@ h6:hover > a.headerlink,
 dt:hover > a.headerlink {
   visibility: visible;
 }
+
+span.viewcode-link {
+	font-size: 10px;
+	margin-left: 6px;
+	vertical-align: super;
+}
+
+a.viewcode-back {
+	font-size: 10px;
+	margin-right: 6px;
+	vertical-align: super;
+}
